--- a/Style.css
+++ b/Style.css
@@ -7,13 +7,14 @@
 	padding-top: 20px;
 	padding-bottom: 20px;
 	padding-left: 20px;
-	font-family: "Tahoma";
+	font-family: Tahoma, sans-serif;
 }
 
 .title-section h1 {
 
 	margin: 0;
 	text-shadow: 2px 2px 4px black;
+	font-family: Tahoma, sans-serif;
 
 }
 
@@ -21,18 +22,21 @@ p {
 
 	margin: 0px;
 	padding: 0px;
+	font-family: Tahoma, sans-serif;
 
 }
 
 h1 { 
 
-	padding-bottom: 10px; 
+	padding-bottom: 10px;
+	font-family: Tahoma, sans-serif; 
 
 }
 
 h2 { 
 
 	margin:0px;
+	font-family: Tahoma, sans-serif;
 
 }
 
@@ -41,7 +45,8 @@ body {
 	background-color: #92e8f7;
 background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox='0 0 44 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 12v-2L0 0v10l4 2h16zm18 0l4-2V0L22 10v2h16zM20 0v8L4 0h16zm18 0L22 8V0h16z' fill='%230bcee5' fill-opacity='0.43' fill-rule='evenodd'/%3E%3C/svg%3E");
         background-repeat: repeat;             /* Repeat the pattern image */
-        background-size: auto; 
+        background-size: auto;
+	font-family: Tahoma, sans-serif; 
 
 }
 
@@ -51,6 +56,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 	padding: 20px;               
 	margin: 20px;            
 	box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1); 
+	font-family: Tahoma, sans-serif;
 }
 
 .navbar {
@@ -59,6 +65,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
     border: 2px solid black;
     border-bottom: 5px solid black;
     text-shadow: 2px 2px 4px black;
+    font-family: Tahoma, sans-serif;
 }
 
 .navbar ul {
