--- a/Style.css
+++ b/Style.css
@@ -36,9 +36,18 @@ h1 {
 h2 { 
 
 	margin:0px;
+	margin-bottom: 5px;
 	font-family: Tahoma, sans-serif;
 
 }
+
+h3 {
+
+	margin:0px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
 
 body {
 	margin = 0px;
