--- a/Style.css
+++ b/Style.css
@@ -121,8 +121,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 }
 
 .project-picture {
-    width: 150px; /* Adjust the size as needed */
-    height: 150px; /* Ensures the picture remains square before rounding */
+    width: 50px; /* Adjust the size as needed */
+    height: auto; /* Ensures the picture remains square before rounding */
     float: right; /* Floats the image to the right inside the content box */
     margin-left: 20px; /* Adds space between the image and the text */
     margin-bottom: 10px; /* Adds space below the image */
@@ -136,8 +136,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 }
 
 .side-by-side {
-    width: 300px; /* Set a fixed width for both images */
-    height: 200px; /* Set a fixed height to ensure uniformity */
+    width: 50px; /* Set a fixed width for both images */
+    height: auto; /* Set a fixed height to ensure uniformity */
     margin-right: 10px; /* Optional: Add spacing between the images */
     border: 2px solid #333; /* Optional: Add a border */
 }
