--- a/Style.css
+++ b/Style.css
@@ -153,13 +153,13 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 }
 
 .side-by-side:first-child {
-    height: 24%;                
+    height: auto;               
     width: 48%;
 }
 
 .side-by-side:last-child {
     width: 24%;
-    height: 48%:               
+    height: auto;              
 }
 
 
