--- a/Style.css
+++ b/Style.css
@@ -153,13 +153,13 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 }
 
 .side-by-side:first-child {
-    height: auto;               
-    width: 48%;
+    height: 10px;               
+    width: 20px;
 }
 
 .side-by-side:last-child {
-    width: 24%;
-    height: auto;              
+    width: 10px;
+    height: 20px;              
 }
 
 
