--- a/Style.css
+++ b/Style.css
@@ -147,26 +147,21 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
     margin-top: 20px;             /* Space above the images */
 }
 
-.side-by-side {
-    width: 48%;                    /* Set width to make them fit side by side */
+.side-by-side-1 {
+    width: 48%;
+    height: 24%                    /* Set width to make them fit side by side */
     border: 2px solid #333;        /* Optional: Add a border */
     max-width: 100%;               /* Prevents image from being larger than the column */
     object-fit: cover;             /* Maintain aspect ratio without stretching */
 }
 
-/* Adjust the height for images directly */
-.image-container img {
-    width: 100%;                   /* Makes the image fill the column */
+.side-by-side-2 {
+    width: 24%;        
+    height: 48%            /* Set width to make them fit side by side */
+    border: 2px solid #333;        /* Optional: Add a border */
+    max-width: 100%;               /* Prevents image from being larger than the column */
+    object-fit: cover;             /* Maintain aspect ratio without stretching */
 }
-
-.image-container img:first-of-type {
-    max-height: 48%;             /* Set maximum height for the first image */
-}
-
-.image-container img:last-of-type {
-    max-height: 24%;             /* Set maximum height for the second image */
-}
-
 
 .project-picture {
     width: 100%;                /* Make images take up the entire column width */
