--- a/Style.css
+++ b/Style.css
@@ -148,11 +148,12 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
 }
 
 .side-by-side-1 {
-    width: 59%;
-    height: 24%                    /* Set width to make them fit side by side */
+    width: 60%;
+    height: 18%                    /* Set width to make them fit side by side */
     border: 2px solid #333;        /* Optional: Add a border */
     max-width: 100%;               /* Prevents image from being larger than the column */
-    object-fit: cover;             /* Maintain aspect ratio without stretching */
+    object-fit: cover;   
+    align-items: center;          /* Maintain aspect ratio without stretching */
 }
 
 .side-by-side-2 {
@@ -160,7 +161,8 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
     height: 48%            /* Set width to make them fit side by side */
     border: 2px solid #333;        /* Optional: Add a border */
     max-width: 100%;               /* Prevents image from being larger than the column */
-    object-fit: cover;             /* Maintain aspect ratio without stretching */
+    object-fit: cover;   
+    align-items: center;          /* Maintain aspect ratio without stretching */
 }
 
 .project-picture {
@@ -181,3 +183,11 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
     flex: 3;                    /* Takes up most of the space (3/4) */
     margin-right: 20px;          /* Adds space between text and images */
 }
+
+.baking-row {
+    display: flex;                /* Enables Flexbox for each row */
+    flex-direction: row;          /* Makes text and images side by side */
+    margin-bottom: 20px;       
+    align-items: center;   /* Adds space between rows */
+}
+
