--- a/Style.css
+++ b/Style.css
@@ -191,3 +191,31 @@ background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox=
     align-items: center;   /* Adds space between rows */
 }
 
+.baking1pic {
+
+    width: 80%;                /* Make images take up the entire column width */
+    height: auto;               /* Maintain aspect ratio */
+    margin-bottom: 10px;        /* Adds space between images *
+    border: 3px solid #333;        /* Optional: Add a border */
+
+}
+
+
+.baking2pic {
+
+    width: 45%;                /* Make images take up the entire column width */
+    height: auto;               /* Maintain aspect ratio */
+    margin-bottom: 10px;        /* Adds space between images *
+    border: 3px solid #333;        /* Optional: Add a border */
+
+}
+
+.baking3pic {
+
+    width: 30%;                /* Make images take up the entire column width */
+    height: auto;               /* Maintain aspect ratio */
+    margin-bottom: 10px;        /* Adds space between images *
+    border: 3px solid #333;        /* Optional: Add a border */
+
+}
+
